--- a/index.html
+++ b/index.html
@@ -17,9 +17,9 @@
                     <li><a href="assets/profile.jpg">RESUME</a></li>
                     <li><a href="#">ABOUT ME</a></li>
                     <a href="mailto:kavyalakshmi395@gmail.com">   <button class="cta1" type="button">CONTACT</button></a>
-                </ul>   
-            </nav>
-        </div>
+                </ul> 
+            </div>  
+        </nav>
     </header>
 
     <main>
@@ -94,28 +94,28 @@
             <div class="container">
                 <h3>▸ My Projects</h3>
                 <h2>What I Did</h2>
-                <div class="service-cards">
-                    <div class="service-card">
+                <div class="project-cards">
+                    <div class="project-card">
                         <img src="assets/lung.jpg" alt="lung">
                         <h4>Lung cancer Prediction</h4>
                         <p>Machine learning algorithms can enhance lung cancer prediction by anlyzing vast amount of medical data to identify pattern and risk factors.</p>
                     </div>
-                    <div class="service-card">
+                    <div class="project-card">
                         <img src="assets/heart.jpg" alt="heart">
                         <h4>Heart Disease Prediction</h4>
                         <p>Machine learningalgorithms can analyze patient data to predict the likehood of heart disease, enabling earlier diagnosis and personalized treatment plans.</p>
                     </div>
-                    <div class="service-card">
+                    <div class="project-card">
                         <img src="assets/football.jpg" alt="football">
                         <h4>Football Prediction</h4>
                         <p>Using Machine learning for football prediction, the system accurately identifies the players, ball, umpire, goalkeeper demonstrating real time sports analytics.</p>
                     </div>
-                    <div class="service-card">
+                    <div class="project-card">
                         <img src="assets/carpark.jpg" alt="carpark">
                         <h4>Vechicle Parking Management System</h4>
                         <p>Efficiently moniter, manage and optimize parking space utilization through real time data analysis.</p>
                     </div>
-                    <div class="service-card">
+                    <div class="project-card">
                         <img src="assets/webcrawler.jpg" alt="webcrawler">
                         <h4>MultiThread Web Crawlering</h4>
                         <p>Significantly speed up data collection by concurrently fetching and processing mulitiple web pages, enhancing efficiency and performance.</p>
@@ -137,14 +137,14 @@
     <section class="social">
         <div class="container">
             <ul class="social-media">
-                <li><a href="#"><img src="assets/insta.jpg" alt="Instagram"></a></li>
-                <li><a href="#"><img src="assets/facebook.jpg" alt="Facebook"></a></li>
-                <li><a href="#"><img src="assets/lindin.jpg" alt="LinkedIn"></a></li>
+                <li><a href="https://whatsapp.com/dl/"><img src="assets/whatsapp.png" alt="Whatsapp"></a></li>
+                <li><a href="https://github.com/dashboard"><img src="assets/github.png" alt="Github"></a></li>
+                <li><a href="https://www.linkedin.com/in/kavya-lakshmi-2075a9288"><img src="assets/linkedin.png" alt="LinkedIn"></a></li>
             </ul>
         </div>
     </section>
     <footer>
-        <p>&copy; 2024 KLD Sports India Pvt Ltd. All rights reserved.</p>
+        <p>&copy; 2024 Kavya Lakshmi Devi</p>
     </footer>
 
     <script src="script.js"></script>
