--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Jurgen Hideni Portfolio</title>
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="css/all.min.css">
+    <link rel="stylesheet" href="css/fontawesome.min.css">
 </head>
 <body>
     <header>
@@ -12,11 +14,15 @@
             <div class="logo">
                 <img src="assets/klogo.png" alt="logo" />
             </div>
-            <ul class="nav-items">
+            <div class="nav-items" id="navLinks">
+                <i class="fa fa-window-close" onclick="hideMenu()"></i>
+                <ul>
                 <li><a href="#">HOME</a></li>
                 <li><a href="assets/profile.jpg">RESUME</a></li>
                 <a href="mailto:kavyalakshmi395@gmail.com">   <button class="cta1" type="button">CONTACT</button></a>
-            </ul>  
+            </ul>
+            </div>  
+            <i class="fa fa-solid fa-bars" onclick="showMenu()"></i>
         </nav>
     </header>
 
@@ -144,5 +150,14 @@
     <footer>
         <p>&copy; 2024 Kavya Lakshmi Devi</p>
     </footer>
+    <script>
+        var navLinks = document.getElementById("navLinks");
+        function showMenu(){
+            navLinks.style.right = "0";
+        }
+        function hideMenu(){
+            navLinks.style.right = "-200px";
+        }
+    </script>
 </body>
 </html>
